sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: not found: value i
    i=0
    ^AlgCombSort:14: error: not found: value i
    while (i+gap<getValueCount()) {
           ^AlgCombSort:15: error: not found: value i
      if (!isSmaller(i,i+gap)) {
                     ^AlgCombSort:15: error: not found: value i
      if (!isSmaller(i,i+gap)) {
                       ^AlgCombSort:16: error: not found: value i
        swap(i+gap,i)
             ^AlgCombSort:16: error: not found: value i
        swap(i+gap,i)
                   ^AlgCombSort:17: error: not found: value i
        i+=1
        ^